--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: csharp
 mono: none
-dotnet: 2.1.300
+sudo: required
+dist: xenial
+dotnet: 2.2
 env:
   - PROJECTNAME=FewBox.Core.Web PROJECTUNITTESTNAME=$PROJECTNAME.UnitTest
 install:
