--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,16 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/FewBox.Core.Web.UnitTest/bin/Debug/netcoreapp2.1/FewBox.Core.Web.UnitTest.dll",
+            "program": "${workspaceFolder}/FewBox.App.Demo/bin/Debug/netcoreapp2.2/FewBox.App.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/FewBox.Core.Web.UnitTest",
+            "cwd": "${workspaceFolder}/FewBox.App.Demo",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
