--- a/FewBox.App.Demo/FewBox.App.Demo.csproj
+++ b/FewBox.App.Demo/FewBox.App.Demo.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FewBox.Core.Persistence" Version="1.0.26" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
