--- a/FewBox.App.Demo/appsettings.json
+++ b/FewBox.App.Demo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=demo;Uid=fewbox;Pwd=landpy;SslMode=none;Charset=utf8;ConnectionTimeout=60;DefaultCommandTimeout=60;"
+  },
   "JWTConfig": {
     "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
     "Issuer": "https://fewbox.com"
