Add find roles service condition.

--- a/FewBox.App.Demo/appsettings.json
+++ b/FewBox.App.Demo/appsettings.json
@@ -6,6 +6,9 @@
     "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
     "Issuer": "https://fewbox.com"
   },
+  "SecurityConfig": {
+    "Name": "FewBox.Demo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
