--- a/FewBox.App.Demo/FewBox.App.Demo.csproj
+++ b/FewBox.App.Demo/FewBox.App.Demo.csproj
@@ -12,9 +12,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="FewBox.Core.Persistence" Version="1.0.37" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1" />
+    <PackageReference Include="NSwag.AspNetCore" Version="12.2.0" />
   </ItemGroup>
 
   <ItemGroup>
