--- a/FewBox.App.Demo/appsettings.json
+++ b/FewBox.App.Demo/appsettings.json
@@ -4,7 +4,7 @@
     "DefaultConnection": "Data Source=demo.sqlite3"
   },
   "JWTConfig": {
-    "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
+    "Key": "Design & Deliver App Service by Love",
     "Issuer": "https://fewbox.com"
   },
   "SecurityConfig": {
