Refactor trace and exception.

--- a/FewBox.App.Demo/appsettings.json
+++ b/FewBox.App.Demo/appsettings.json
@@ -10,6 +10,18 @@
   "SecurityConfig": {
     "Name": "FewBox.Demo"
   },
+  "LogConfig": {
+    "Name": "Log",
+    "Protocol": "http",
+    "Host": "log",
+    "Port": 80
+  },
+  "NotificationConfig": {
+    "Name": "Notification",
+    "Protocol": "http",
+    "Host": "notification",
+    "Port": 80
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
