Add Healthy Controller.

--- a/FewBox.App.Demo/appsettings.json
+++ b/FewBox.App.Demo/appsettings.json
@@ -22,6 +22,9 @@
     "Host": "notification",
     "Port": 80
   },
+  "HealthyConfig": {
+    "Version": "v1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
