Refine code. [skip ci]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/FewBox.App.Demo/bin/Debug/netcoreapp2.2/FewBox.App.Demo.dll",
+            "program": "${workspaceFolder}/FewBox.Core.Web.Demo/bin/Debug/netcoreapp3.1/FewBox.Core.Web.Demo.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/FewBox.App.Demo",
+            "cwd": "${workspaceFolder}/FewBox.Core.Web.Demo",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
