--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/FewBox.App.Demo/FewBox.App.Demo.csproj"
+                "${workspaceFolder}/FewBox.Core.Web.Demo/FewBox.Core.Web.Demo.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
