Add sentry and refine code.

--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -6,7 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Sentry": {
+    "Dsn": "https://a63123dfd87148b09c3cf936d21df19d@o368923.ingest.sentry.io/5175460",
+    "IncludeRequestPayload": true,
+    "SendDefaultPii": true,
+    "MinimumBreadcrumbLevel": "Debug",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": true,
+    "DiagnosticsLevel": "Error"
+  },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "_DefaultConnection": "Server=localhost;Database=demo;Uid=fewbox;Pwd=landpy;SslMode=none;Charset=utf8;ConnectionTimeout=60;DefaultCommandTimeout=60;",
+    "DefaultConnection": "Data Source=demo.sqlite3"
+  },
   "JWTConfig": {
     "Key": "Design & Deliver App Service by Love",
     "Issuer": "https://fewbox.com"
