--- a/FewBox.Core.Web.Demo/FewBox.Core.Web.Demo.csproj
+++ b/FewBox.Core.Web.Demo/FewBox.Core.Web.Demo.csproj
@@ -9,6 +9,9 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="FewBox.Core.Persistence" Version="1.0.38" />
     <PackageReference Include="FewBox.Core.Utility" Version="1.0.31" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.4.2" />
+    <PackageReference Include="Sentry.AspNetCore" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
