--- a/FewBox.Core.Web.UnitTest/FewBox.Core.Web.UnitTest.csproj
+++ b/FewBox.Core.Web.UnitTest/FewBox.Core.Web.UnitTest.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="Moq" Version="4.14.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.1" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
