--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 dist: xenial
 dotnet: 3.1
 env:
-  - PROJECTNAME=FewBox.Core.Web PROJECTUNITTESTNAME=$PROJECTNAME.UnitTest APP_PROJECTNAME=FewBox.App.Demo APP_PROJECTUNITTESTNAME=$PROJECTNAME.UnitTest
+  - PROJECTNAME=FewBox.Core.Web PROJECTUNITTESTNAME=$PROJECTNAME.UnitTest APP_PROJECTNAME=FewBox.Core.Web.Demo APP_PROJECTUNITTESTNAME=$PROJECTNAME.UnitTest
 install:
   - dotnet restore $TRAVIS_BUILD_DIR/$PROJECTNAME/$PROJECTNAME.csproj
   - dotnet restore $TRAVIS_BUILD_DIR/$PROJECTUNITTESTNAME/$PROJECTUNITTESTNAME.csproj
