--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -26,10 +26,11 @@
     "Issuer": "https://fewbox.com"
   },
   "SecurityConfig": {
-    "Name": "FewBox.Demo"
+    "Protocol": "http",
+    "Host": "auth",
+    "Port": 80
   },
   "NotificationConfig": {
-    "Name": "Notification",
     "Protocol": "http",
     "Host": "notification",
     "Port": 80
