Resolve signalr token issue.

--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -22,7 +22,7 @@
     "DefaultConnection": "Data Source=demo.sqlite3"
   },
   "JWTConfig": {
-    "Key": "Design & Deliver App Service by Love",
+    "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
     "Issuer": "https://fewbox.com"
   },
   "SecurityConfig": {
