--- a/FewBox.Core.Web.Demo/FewBox.Core.Web.Demo.csproj
+++ b/FewBox.Core.Web.Demo/FewBox.Core.Web.Demo.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.4.2" />
     <PackageReference Include="Sentry.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
