--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -19,7 +19,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "_DefaultConnection": "Server=localhost;Database=demo;Uid=fewbox;Pwd=landpy;SslMode=none;Charset=utf8;ConnectionTimeout=60;DefaultCommandTimeout=60;",
-    "DefaultConnection": "Data Source=demo.sqlite3"
+    "DefaultConnection": "Data Source=demo.sqlite3",
+    "TenantConnection": "Server=localhost;Database=[Tenant];Uid=fewbox;Pwd=landpy;SslMode=none;Charset=utf8;ConnectionTimeout=60;DefaultCommandTimeout=60;"
   },
   "JWTConfig": {
     "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
