--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -22,21 +22,30 @@
     "DefaultConnection": "Data Source=demo.sqlite3",
     "TenantConnection": "Server=localhost;Database=[Tenant];Uid=fewbox;Pwd=Landpy2018;SslMode=none;Charset=utf8;ConnectionTimeout=60;DefaultCommandTimeout=60;"
   },
-  "JWTConfig": {
-    "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
-    "Issuer": "https://fewbox.com"
-  },
-  "SecurityConfig": {
-    "Protocol": "http",
-    "Host": "auth",
-    "Port": 80
-  },
-  "NotificationConfig": {
-    "Protocol": "http",
-    "Host": "notification",
-    "Port": 80
-  },
-  "HealthyConfig": {
-    "Version": "v1"
+  "FewBox": {
+    "Healthy": {
+      "Version": "v1"
+    },
+    "JWT": {
+      "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
+      "Issuer": "https://fewbox.com"
+    },
+    "Notification": {
+      "Protocol": "http",
+      "Host": "notification",
+      "Port": 80
+    },
+    "Orm": {
+      "ConnectionType": "Normal"
+    },
+    "RedisDistributedCache": {
+      "Configuration": "",
+      "InstanceName": ""
+    },
+    "SecurityEndpoint": {
+      "Protocol": "http",
+      "Host": "auth",
+      "Port": 80
+    }
   }
 }
