Refine code. [skip ci]

--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -62,6 +62,9 @@
     "Twitter": {
       "ConsumerKey": "{Your ConsumerKey}",
       "ConsumerSecret": "{Your ConsumerSecret}"
+    },
+    "Cors": {
+      "S": "xxx"
     }
   }
 }
