--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -28,7 +28,8 @@
     },
     "JWT": {
       "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
-      "Issuer": "https://fewbox.com"
+      "Issuer": "https://fewbox.com",
+      "Audience": "https://figma.fewbox.com"
     },
     "Notification": {
       "Protocol": "http",
