--- a/FewBox.Core.Web.Demo/appsettings.json
+++ b/FewBox.Core.Web.Demo/appsettings.json
@@ -27,9 +27,9 @@
       "Version": "v1"
     },
     "JWT": {
-      "Key": "EnVsakc0bNXs1UYHAiOjE1ND",
+      "Key": "Rushing Smart & Simple ❤",
       "Issuer": "https://fewbox.com",
-      "Audience": "https://figma.fewbox.com"
+      "Audience": "https://fewbox.com"
     },
     "Notification": {
       "Protocol": "http",
