--- a/FewBox.Core.Web/FewBox.Core.Web.csproj
+++ b/FewBox.Core.Web/FewBox.Core.Web.csproj
@@ -6,7 +6,7 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/FewBox/FewBox.Core.Web/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://fewbox.com</PackageProjectUrl>
     <PackageTags>Web</PackageTags>
-    <Version>1.0.116</Version>
+    <Version>1.0.117</Version>
     <PackageIconUrl>https://secure.gravatar.com/avatar/ce54e932b36c8d58321cc956410c37ed</PackageIconUrl>
     <RepositoryUrl>https://github.com/FewBox/FewBox.Core.Web</RepositoryUrl>
     <Company>FewBox</Company>
@@ -25,6 +25,7 @@
     <PackageReference Include="FewBox.Core.Persistence" Version="1.0.43" />
     <PackageReference Include="FewBox.Core.Utility" Version="1.0.32" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.3.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
